test/syc/good/lt.c
/*
 * Less than
 */

int a, b;

int lt(void)
{
	return a < b;
}
