test/syc/bad/voidfirstarg.c
/*
 * Void must be the first and only argument
 */

int foo(int a, void)
{
	return 0;
}
